tools/agent-bus/tests/snapshots/cli_flow__golden_coordinate_output.snap
---
source: tests/cli_flow.rs
expression: out
---
{
  "causal_frontier": {
    "coord1": "[hash]"
  },
  "freshness": "cached",
  "last_synced": null,
  "not_attempted": [],
  "outbox_held": [],
  "outbox_rejected": [],
  "published": {
    "refs/heads/agent-events/coord1": "[hash]"
  },
  "published_events": [
    "coord1:1"
  ],
  "rejected": [],
  "roster_epoch": "[hash]",
  "snapshot_receipt": {
    "coord1": "[hash]"
  }
}
