tools/agent-bus/tests/snapshots/cli_flow__golden_merge_ready_output.snap
---
source: tests/cli_flow.rs
assertion_line: 2098
expression: out
---
{
  "candidate": "[hash]",
  "ready": true
}
