tools/agent-bus/tests/snapshots/cli_flow__golden_submit_output.snap
---
source: tests/cli_flow.rs
expression: out
---
{
  "client_id": "golden-submit-1",
  "outbox_path": "[outbox_path]"
}
