tools/agent-bus/tests/snapshots/cli_flow__golden_succeed_output.snap
---
source: tests/cli_flow.rs
expression: out
---
{
  "causal_frontier": {
    "alice": "[hash]",
    "coord1": "[hash]"
  },
  "freshness": "cached",
  "last_synced": null,
  "new_custody_epoch": 1,
  "registry_epoch": "[hash]",
  "registry_not_attempted": [],
  "registry_published": {
    "refs/heads/agent-registry": "[hash]"
  },
  "registry_rejected": [],
  "resumed_events": [],
  "resumed_held": [],
  "resumed_rejected": [],
  "roster_epoch": "[hash]",
  "snapshot_receipt": {
    "alice": "[hash]",
    "coord1": "[hash]"
  },
  "stream_not_attempted": [],
  "stream_published": {
    "refs/heads/agent-events/alice": "[hash]"
  },
  "stream_rejected": []
}
